; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/brcm80211/brcmsmac/extr_main.c_brcms_c_tsf_set.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/brcm80211/brcmsmac/extr_main.c_brcms_c_tsf_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcms_c_info = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@tsf_timerlow = common dso_local global i32 0, align 4
@tsf_timerhigh = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @brcms_c_tsf_set(%struct.brcms_c_info* %0, i32 %1) #0 {
  %3 = alloca %struct.brcms_c_info*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.brcms_c_info* %0, %struct.brcms_c_info** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.brcms_c_info*, %struct.brcms_c_info** %3, align 8
  %8 = call i32 @brcms_c_time_lock(%struct.brcms_c_info* %7)
  %9 = load i32, i32* %4, align 4
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %4, align 4
  %11 = ashr i32 %10, 32
  store i32 %11, i32* %5, align 4
  %12 = load %struct.brcms_c_info*, %struct.brcms_c_info** %3, align 8
  %13 = getelementptr inbounds %struct.brcms_c_info, %struct.brcms_c_info* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @tsf_timerlow, align 4
  %18 = call i32 @D11REGOFFS(i32 %17)
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @bcma_write32(i32 %16, i32 %18, i32 %19)
  %21 = load %struct.brcms_c_info*, %struct.brcms_c_info** %3, align 8
  %22 = getelementptr inbounds %struct.brcms_c_info, %struct.brcms_c_info* %21, i32 0, i32 0
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @tsf_timerhigh, align 4
  %27 = call i32 @D11REGOFFS(i32 %26)
  %28 = load i32, i32* %5, align 4
  %29 = call i32 @bcma_write32(i32 %25, i32 %27, i32 %28)
  %30 = load %struct.brcms_c_info*, %struct.brcms_c_info** %3, align 8
  %31 = call i32 @brcms_c_time_unlock(%struct.brcms_c_info* %30)
  ret void
}

declare dso_local i32 @brcms_c_time_lock(%struct.brcms_c_info*) #1

declare dso_local i32 @bcma_write32(i32, i32, i32) #1

declare dso_local i32 @D11REGOFFS(i32) #1

declare dso_local i32 @brcms_c_time_unlock(%struct.brcms_c_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
